tests/rustdoc-ui/doctest/merge-doctests-invalid.rs
//@ compile-flags: --merge-doctests=bad-opt -Zunstable-options
//~? ERROR must be a boolean
